[gd_scene load_steps=19 format=3 uid="uid://bdn10xypgr4j0"]

[ext_resource type="Shader" uid="uid://dbf33bsxrsi1x" path="res://bg_stars.gdshader" id="1_jf8mj"]
[ext_resource type="Script" uid="uid://butvhv1xw41l0" path="res://Menus/background_gen.gd" id="1_p3jrs"]
[ext_resource type="PackedScene" uid="uid://dn8u0s6bv084r" path="res://bg_nebula.tscn" id="2_at0u2"]
[ext_resource type="Script" uid="uid://d4cneeyaj4hht" path="res://Menus/main_menu.gd" id="3_11gta"]
[ext_resource type="AudioStream" uid="uid://d4hy1f1qs35hu" path="res://Music/Lone Fleet.mp3" id="5_cxdly"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at0u2"]
bg_color = Color(0.0313726, 0.0627451, 0.12549, 0.627451)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 16
corner_radius_bottom_right = 32
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxdly"]
bg_color = Color(0.0313726, 0.0627451, 0.12549, 0.627451)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p3jrs"]
render_priority = 0
shader = ExtResource("1_jf8mj")
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/seed = 1.0
shader_parameter/prob = 1.0
shader_parameter/size = 100.0

[sub_resource type="SphereMesh" id="SphereMesh_at0u2"]
flip_faces = true
radius = 3500.0
height = 7000.0
radial_segments = 8
rings = 4

[sub_resource type="Gradient" id="Gradient_ulv8f"]
offsets = PackedFloat32Array(0, 0.412698, 0.702381, 0.904762, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.392857, 0.392857, 0.392857, 1, 0.606249, 0.606249, 0.606249, 1, 0.75533, 0.75533, 0.75533, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ulv8f"]
frequency = 0.075
fractal_gain = 1.5
fractal_weighted_strength = 0.5
domain_warp_amplitude = 31.81
domain_warp_frequency = -0.09
domain_warp_fractal_type = 2
domain_warp_fractal_octaves = 10
domain_warp_fractal_lacunarity = 6.53

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_11gta"]
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_ulv8f")
noise = SubResource("FastNoiseLite_ulv8f")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rxlph"]
albedo_color = Color(1, 0.470588, 0, 1)
emission_enabled = true
emission = Color(1, 0.470588, 0, 1)
emission_texture = SubResource("NoiseTexture2D_11gta")

[sub_resource type="SphereMesh" id="SphereMesh_cxdly"]
material = SubResource("StandardMaterial3D_rxlph")
radius = 100.0
height = 200.0
radial_segments = 48
rings = 24

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w5eul"]
albedo_color = Color(1, 0.470588, 0, 1)
emission_enabled = true
emission = Color(1, 0.470588, 0, 1)
emission_texture = SubResource("NoiseTexture2D_11gta")

[sub_resource type="SphereMesh" id="SphereMesh_vxn86"]
material = SubResource("StandardMaterial3D_w5eul")
radius = 100.0
height = 200.0
radial_segments = 48
rings = 24

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4fhbr"]
albedo_color = Color(1, 0.470588, 0, 1)
emission_enabled = true
emission = Color(1, 0.470588, 0, 1)
emission_texture = SubResource("NoiseTexture2D_11gta")

[sub_resource type="SphereMesh" id="SphereMesh_gn11b"]
material = SubResource("StandardMaterial3D_4fhbr")
radius = 100.0
height = 200.0
radial_segments = 48
rings = 24

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_p3jrs")
bg_nebula = ExtResource("2_at0u2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_11gta")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftSide" type="MarginContainer" parent="CanvasLayer/MainControl/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 160

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainControl/HBoxContainer/LeftSide"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/LeftSide/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Label" type="Label" parent="CanvasLayer/MainControl/HBoxContainer/LeftSide/VBoxContainer/Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.74902, 1, 1)
theme_override_font_sizes/font_size = 96
text = "FATAL FLEET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Version" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/LeftSide/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cxdly")

[node name="Label" type="Label" parent="CanvasLayer/MainControl/HBoxContainer/LeftSide/VBoxContainer/Version"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "VERSION: v0.1.0 ALPHA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSide" type="MarginContainer" parent="CanvasLayer/MainControl/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 320
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 80

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide"]
unique_name_in_owner = true
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
theme_override_constants/separation = 76

[node name="NewGame" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Button" type="Button" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/NewGame"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "NEW GAME"
flat = true

[node name="ContinueGame" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Button" type="Button" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/ContinueGame"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "CONTINUE GAME"
flat = true

[node name="Tutorial" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Button" type="Button" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Tutorial"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "TUTORIAL"
flat = true

[node name="Settings" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Button" type="Button" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Settings"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "SETTINGS"
flat = true

[node name="Credits" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Button" type="Button" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Credits"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "CREDITS"
flat = true

[node name="Quit" type="PanelContainer" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_at0u2")

[node name="Button" type="Button" parent="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Quit"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.74902, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "QUIT"
flat = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 50, 100)
current = true

[node name="BGStars" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_p3jrs")
mesh = SubResource("SphereMesh_at0u2")

[node name="Background" type="Node3D" parent="."]

[node name="MainStar1" type="MeshInstance3D" parent="Background" groups=["1", "2", "3"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2000)
mesh = SubResource("SphereMesh_cxdly")

[node name="MainStar2" type="MeshInstance3D" parent="Background" groups=["2", "3"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2000)
mesh = SubResource("SphereMesh_vxn86")

[node name="MainStar3" type="MeshInstance3D" parent="Background" groups=["3"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2000)
mesh = SubResource("SphereMesh_gn11b")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cxdly")
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/NewGame/Button" to="CanvasLayer/MainControl" method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/ContinueGame/Button" to="CanvasLayer/MainControl" method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Tutorial/Button" to="CanvasLayer/MainControl" method="_on_new_game_pressed" binds= [true]]
[connection signal="pressed" from="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Settings/Button" to="CanvasLayer/MainControl" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Credits/Button" to="CanvasLayer/MainControl" method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/MainControl/HBoxContainer/RightSide/Buttons/Quit/Button" to="CanvasLayer/MainControl" method="_on_quit_pressed"]
